added login projects firebase

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="I am Gustavo Resende, Developer & IT Analyst">
     <title>Resende</title>
   </head>
   <body>
